# mlip_struc_generator

./: .gitignore  README.md  main.py  main_gui.py  pyproject.toml  verify_ui.py
.github/workflows/: ci.yml
config/: config.yaml
dashboard/: app.py  config.yaml
dashboard/data/: pca.csv
dashboard/data/structures/: struct_0.xyz  struct_1.xyz  struct_2.xyz  struct_3.xyz  struct_4.xyz  struct_5.xyz  struct_6.xyz  struct_7.xyz  struct_8.xyz  struct_9.xyz
dashboard/logic/: __init__.py  analysis.py  config_manager.py  simulation_interface.py  simulation_mock.py
examples/: surface_config.yaml
src/nnp_gen/core/: calculators.py  config.py  exceptions.py  interfaces.py  io.py  models.py  physics.py  soft_sphere.py  storage.py  system_utils.py  validation.py  zbl.py
src/nnp_gen/explorers/: mc_moves.py  md_engine.py
src/nnp_gen/generators/: __init__.py  adsorption.py  alloy.py  covalent.py  designated.py  factory.py  file_loader.py  interface.py  ionic.py  knowledge.py  mixed.py  molecule.py  random_gen.py  utils.py
src/nnp_gen/pipeline/: runner.py
src/nnp_gen/samplers/: selector.py
src/nnp_gen/web_ui/: app.py  job_manager.py  utils.py
src/nnp_gen/web_ui/components/: structure_viewer.py
src/nnp_gen/web_ui/tabs/: config_tab.py  viz_tab.py
test_output/20251212_172818_9982fe69/: config.yaml
test_output/20251212_172818_bde4c612/: config.yaml
tests/: test_audit_verification.py  test_concurrency.py  test_config.py  test_config_adsorbate.py  test_constraints.py  test_dependencies.py  test_file_loader.py  test_generators.py  test_hybrid_architecture.py  test_integration.py  test_integration_real.py  test_interface_gen.py  test_ionic_geometry.py  test_knowledge_generator.py  test_md_energy_conservation.py  test_md_engine.py  test_physics.py  test_physics_correctness.py  test_physics_correctness_extended.py  test_physics_errors.py  test_pipeline.py  test_samplers.py  test_storage.py  test_surface_engine.py  verify_polish.py
tests/dashboard/: test_logic.py  test_ui.py
tests/web_ui/: conftest.py  test_config_tab.py  test_job_manager.py  test_viz_tab.py
tutorials/: README.md
tutorials/01_alloy_fe_pt/: config.yaml
tutorials/02_ionic_sio2/: config.yaml
tutorials/03_covalent_c/: config.yaml
tutorials/04_interface_cu_ni/: config.yaml
tutorials/05_file_loading/: config.yaml
tutorials/06_knowledge_generation/: config.yaml
tutorials/07_adsorption_co_pt/: config.yaml
