[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnp_gen"
version = "0.1.0"
description = "Neural Network Potential Dataset Generation Pipeline"
authors = [
  { name = "Jules", email = "jules@example.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.0,<3.0",
    "hydra-core",
    "ase>=3.22,<4.0",
    "numpy>=1.24,<2.0",
    "tqdm",
    "scipy>=1.10,<2.0",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock"
]
ionic = ["pymatgen"]
alloy = ["icet"]
covalent = ["pyxtal"]
molecule = ["rdkit"]
ml-calculators = ["mace-torch", "sevenn", "matgl", "chgnet"]
descriptors = ["dscribe"]
all = ["pymatgen", "icet", "pyxtal", "rdkit", "mace-torch", "sevenn", "matgl", "chgnet", "dscribe"]
