[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnp_gen"
version = "0.1.0"
description = "Neural Network Potential Dataset Generation Pipeline"
authors = [
  { name = "Jules", email = "jules@example.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.0,<3.0",
    "hydra-core",
    "ase>=3.22,<4.0",
    "numpy>=1.24,<2.0",
    "tqdm",
    "scipy>=1.10,<2.0",
    "torch>=2.0.0,<2.6.0",
    "panel>=1.3.0,<2.0.0",
    "param>=2.3.1",
    "scikit-learn>=1.7.2",
    "pymatgen>=2024.1.1,<2026.0.0",
    "psutil>=7.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock"
]
ionic = ["pymatgen"]
alloy = ["icet"]
covalent = ["pyxtal"]
knowledge = ["pyxtal"]
molecule = ["rdkit"]
ml-calculators = ["mace-torch", "sevenn", "matgl", "chgnet"]
descriptors = ["dscribe"]
all = ["pymatgen", "icet", "pyxtal", "rdkit", "mace-torch", "sevenn", "matgl", "chgnet", "dscribe"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]
